--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,15 @@ drop-shadow-[0_2px_6px_rgba(0,0,0,0.5)]
     line-height: 1.2;
   }
 }
+
+section {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 640px) {
+  section {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+}
