--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,25 @@ section {
     margin-bottom: 30px;
   }
 }
+
+html, body {
+  overflow-x: hidden;
+  overflow-y: auto;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+body {
+  font-size: 16px;
+}
+
+@media (min-width: 768px) {
+  body {
+    font-size: 18px;
+  }
+}
